fix for horizontal scroll on post pages. Removed li from it because it was causing an issue with the sharing icons i believe

--- a/assets/styles/_climatefeedback.scss
+++ b/assets/styles/_climatefeedback.scss
@@ -2,10 +2,10 @@
 
 @import url(http://fonts.googleapis.com/css?family=Raleway:500,400,300,800,700);
 
-html, body, p, li {
+html, body, p {
   font-family: 'Raleway', sans-serif;
   font-size: 16px;
-//      overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 ol, ul {
